--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-{}
+[{"id":"fc26363d-9b00-4dad-a78d-02e3f6fd26c2","description":"\"Hello World\"","status":"COMPLETED","createdAt":[2024,12,30,16,10,51,242708000],"updatedAt":[2024,12,30,16,11,25,990818000]},{"id":"d9cce4d5-742a-46ef-b3d6-3279df61fb7b","description":"\"Hello World2\"","status":"TODO","createdAt":[2024,12,30,16,12,25,983813000],"updatedAt":[2024,12,30,16,12,25,983851000]},{"id":"6db9c3ac-83e5-4ec4-be77-e9d435f411af","description":"\"Task 2\"","status":"COMPLETED","createdAt":[2024,12,30,16,11,37,295115000],"updatedAt":[2024,12,30,16,12,7,959011000]}]
